--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,22 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Truffle
+# Logs
+logs
+*.log
+
+# Directories used by tools like mocha & istanbul
+coverage
+shippable
+
+# Dependency directory
+node_modules
+
+# Generated files
+config/development/contracts.json
+config/development/*.sol.js
+config/test/contracts.json
+build
+dist
