--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,21 @@ config/development/*.sol.js
 config/test/contracts.json
 build
 dist
+
+# Lock files
+package-lock.json
+yarn.lock
+
+# coverage
+coverage/
+coverageEnv/
+coverage.json
+allFiredEvents
+scTopics
+
+# truffle build artifacts
+abi/
+build/
+bytecode/
+bytecode_new/
+flattened_contracts/
